example/computer system architecture/c/good/fptr1.c
#include <stdio.h>

void hello() {
  printf("hello !\n");
}

void call(void (*f)()) {
  f();
}

int main() {
  call(hello);
}
