example/computer system architecture/c/bad/stackerror2.c
char *f() { char *a="hello"; return a; }